2013-01-15  Nick Clifton  <nickc@redhat.com>

	* libc/sys/sysnecv850/crt0.S (_start): Enable FPU for the
	V850e2v3.

2013-01-12  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/string.h: Fix preprocessor expressions using
	_XOPEN_SOURCE.

2013-01-11  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdio/vfwprintf.c (_VFWPRINTF_R): Add code to correctly handle
	's' format specifier on not _MB_CAPABLE targets.  Fix a formatting
	glitch in _MB_CAPABLE enabled code.  Add a missing 'L' specifier.

2013-01-10  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Add
	memcmp-stub.c and memcmp.S
	* libc/machine/aarch64/Makefile.in: Regenerated.
	* libc/machine/aarch64/memcmp-stub.c: New file.
	* libc/machine/aarch64/memcmp.S: New file.

2013-01-10  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Add
	strnlen-stub.c and strnlen.S
	* libc/machine/aarch64/Makefile.in: Regenerated.
	* libc/machine/aarch64/strnlen-stub.c: New file.
	* libc/machine/aarch64/strnlen.S: New file.

2013-01-10  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES):
	Add strlen.S and strlen-stub.c.
	* libc/machine/aarch64/Makefile.in: Regenerated.
	* libc/machine/aarch64/strlen-stub.c: New file.
	* libc/machine/aarch64/strlen.S: New file.

2013-01-10  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES):
	Add memmove.S and memmove-stub.c.
	* libc/machine/aarch64/Makefile.in: Regenerated.
	* libc/machine/aarch64/memmove-stub.c: New file.
	* libc/machine/aarch64/memmove.S: New file.

2013-01-10  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Re-ordered.
	Add strncmp.S and strncmp-stub.c.
	* libc/machine/aarch64/Makefile.in: Regenerated.
	* libc/machine/aarch64/strncmp-stub.c: New file.
	* libc/machine/aarch64/strncmp.S: New file.
