@@ -1,3 +1,9 @@
+2013-01-17  Marcus Shawcroft  <marcus.shawcroft@linaro.org>
+
+	* libc/machine/aarch64/strnlen.S: Correct arithmetic for
+	argument N values close to the maximum representable
+	value in an unsigned 64 bit value.
+
 2013-01-15  Nick Clifton  <nickc@redhat.com>
 
 	* libc/sys/sysnecv850/crt0.S (_start): Enable FPU for the
